Added pdf folder(math and split_train_test are done) and txt file to empty folders and frontpage

--- a/Assignments/Journal1/L02/math.ipynb
+++ b/Assignments/Journal1/L02/math.ipynb
@@ -4,23 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ITMAL Exercise\n",
-    "\n",
-    "REVISIONS|\n",
-    "---------|------------------------------------------------\n",
-    "2018-1218|CEF, initial.                  \n",
-    "2019-0131|CEF, spell checked and update. \n",
-    "2019-0204|CEF, changed d1/d2 in Qb to L1/L2. Fixe rev date error.\n",
-    "2019-0204|CEF, changed headline.\n",
-    "2019-0204|CEF, changed (.) in dist(x,y) to use pipes instead.\n",
-    "2019-0204|CEF, updated supervised learning fig, and changed , to ; for thetas, and change = to propto\n",
+    "# Basic Machine Learning Math\n",
     "\n",
     "\n",
-    "## Mathematical Foundation\n",
+    "## Introduction\n",
+    "\n",
+    "In this exercise we are to show an understanding for some of the mathematical building bricks of machine learning. This includes working with matrices and arrays both mathematically and pythonic.\n",
     "\n",
     "### Vector and matrix representation in python\n",
     "\n",
-    "Say, we have $d$ features for a given sample point. This $d$-sized feature column vector for a data-sample $i$ is then given by\n",
+    "\n",
+    "#### Qa Given the following $\\mathbf{x}^{(i)}$'s, construct and print the $\\mathbf X$ matrix in python.\n",
     "\n",
     "$$\n",
     "    \\newcommand\\rem[1]{}\n",
@@ -45,61 +39,6 @@
     "    \\def\\btheta{{\\boldsymbol\\theta}}\n",
     "    \\def\\half{\\frac{1}{2}}\n",
     "$$    \n",
-    " \n",
-    "$$\n",
-    "    \\bx\\powni = \n",
-    "        \\ac{c}{\n",
-    "            x_1\\powni \\\\\n",
-    "            x_2\\powni \\\\ \n",
-    "            \\vdots \\\\\n",
-    "            x_d\\powni\n",
-    "         }  \n",
-    "$$\n",
-    "\n",
-    "or typically written transposed to save as\n",
-    "\n",
-    "$$\n",
-    "    \\bx\\powni = \\left[  x_1\\powni~~ x_2\\powni~~ \\cdots~~ x_d\\powni\\right]^T\n",
-    "$$\n",
-    "\n",
-    "The full data matrix $\\bX$ is then constructed out of $n$ samples of these feature vectors\n",
-    "\n",
-    "$$\n",
-    "    \\bX =\n",
-    "        \\ac{cccc}{\n",
-    "            x_1\\pown{1} & x_2\\pown{1} & \\cdots & x_d\\pown{1} \\\\\n",
-    "            x_1\\pown{2} & x_2\\pown{2} & \\cdots & x_d\\pown{2}\\\\\n",
-    "            \\vdots      &             &        & \\vdots \\\\\n",
-    "            x_1\\pownn   & x_2\\pownn   & \\cdots & x_d\\pownn\\\\\n",
-    "        }\n",
-    "$$\n",
-    "\n",
-    "such that $\\bX$ can be expressed as\n",
-    "\n",
-    "$$\n",
-    "    \\bX = \n",
-    "      \\ac{c}{\n",
-    "        (\\bx\\pown{1})^T \\\\\n",
-    "        (\\bx\\pown{2})^T \\\\\n",
-    "        \\vdots \\\\\n",
-    "        (\\bx\\pownn)^T\n",
-    "      }\n",
-    "$$\n",
-    "\n",
-    "but sometimes the notation is a little more fuzzy, leaving out the transpose operator for $\\mathbf x$ and in doing so just interpreting the $\\mathbf{x}^{(i)}$'s to be row vectors instead of column vectors.\n",
-    "\n",
-    "The target column vector, $\\mathbf y$, also has the dimension $n$ \n",
-    "\n",
-    "$$\n",
-    "    \\by = \\ac{c}{\n",
-    "            y\\pown{1} \\\\\n",
-    "            y\\pown{2} \\\\\n",
-    "            \\vdots \\\\\n",
-    "            y\\pownn \\\\\n",
-    "          }\n",
-    "$$\n",
-    "\n",
-    "#### Qa Given the following $\\mathbf{x}^{(i)}$'s, construct and print the $\\mathbf X$ matrix in python.\n",
     "\n",
     "$$\n",
     "    \\ar{rl}{\n",
@@ -115,8 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qa Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +77,6 @@
     }
    ],
    "source": [
-    "# Qa\n",
-    "\n",
     "import numpy as np\n",
     "\n",
     "y = np.array([1,2,3,4]) # NOTE:  you'll need this later\n",
@@ -148,8 +92,17 @@
     "# using the vectors x1-4 we create the full matrix X\n",
     "\n",
     "X = np.array([x1.T, x2.T, x3.T, x4.T])\n",
-    "\n",
+    " \n",
     "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qa Result\n",
+    "\n",
+    "As seen on the prinout above X is a nice 3x4 matrix, just as it ought to be"
    ]
   },
   {
@@ -158,49 +111,14 @@
    "source": [
     "### Norms, metrics or distances\n",
     "\n",
-    "The $\\norm{2}$ Euclidian distance, or norm, for a vector of size $n$ is defined as \n",
-    "\n",
     "$$\n",
     "    \\norm{2}:~~ ||\\bx||_2 = \\left( \\sum_{i=1}^{n} |x_i|^2 \\right)^{1/2}\\\\\n",
     "$$\n",
     "\n",
-    "and the distance between two vectors is given by\n",
-    "\n",
-    "$$\n",
-    "    \\ar{ll}{      \n",
-    "          d(\\bx,\\by) &= ||\\bx-\\by||_2\\\\\n",
-    "                     &= \\left[ \\sum_{i=1}^n \\left| x_{i}-y_{i} \\right|^2 \\right]^{1/2}\n",
-    "    }\n",
-    "$$ \n",
-    "\n",
-    "This Euclidian norm is sometimes also just denoted as $||\\bx||$, leaving out the 2 in the subscript.\n",
-    "\n",
-    "The squared $\\norm{2}$ for a vector can compactly be expressed via \n",
-    "\n",
-    "$$\n",
-    "    \\norm{2}^2: ||\\bx||_2^2 = \\bx^\\top\\bx\n",
-    "$$\n",
-    "\n",
-    "by the general dot or inner-product (taking $\\by=\\bx$ in the $\\norm{2}^2$ above)\n",
-    "\n",
-    "$$\n",
-    "    \\ar{ll}{\n",
-    "        \\langle\\bx,\\by\\rangle &= \\bx\\cdot\\by\\\\ \n",
-    "                              &=\\bx^\\top \\by\\\\\n",
-    "                              &= \\sum_{i=1}^n x_{i} y_{i} \\\\\n",
-    "                              &= ||\\bx|| ~ ||\\by|| \\cos{\\theta}\n",
-    "    }\n",
-    "$$\n",
-    "\n",
-    "taking $\\theta$ to be zero, and hence $cos(\\theta)=1$ when calculating $\\langle\\bx,\\bx\\rangle$\n",
-    "\n",
-    "The $\\norm{1}$ 'City-block' norm is given by\n",
     "\n",
     "$$\n",
     "    \\norm{1}:~~ ||\\bx||_1 = \\sum_i |x_i|\n",
     "$$\n",
-    "\n",
-    "but $\\norm{1}$ is not used as intensive as its more popular $\\norm{2}$ cousin.\n",
     "\n",
     "#### Qb Implement the $\\norm{1}$ and $\\norm{2}$ norms for vectors in python.\n",
     "\n",
@@ -212,8 +130,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qb Implementation\n",
+    "Implement the L1, L2 and L2Dot functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -226,10 +152,10 @@
     }
    ],
    "source": [
-    "# TODO: solve Qb...implement the L1, L2 and L2Dot functions...\n",
-    "\n",
     "# L1 is solved using a for loop to sum all the values in the array\n",
     "def L1(xi):\n",
+    "\n",
+    "    assert xi.shape[0]>=0, \"L1 xi matrix is empty\"\n",
     "\n",
     "    sum = 0\n",
     "    xi = abs(xi)\n",
@@ -242,6 +168,8 @@
     "# L2 is solved using a for loop to sum all the values, squared, in the array. The root value of the sum is then returned\n",
     "def L2(xi):\n",
     "    \n",
+    "    assert xi.shape[0]>=0, \"L2 xi matrix is empty\"\n",
+    "\n",
     "    sum = 0\n",
     "    xi = abs(xi)\n",
     "    \n",
@@ -252,6 +180,8 @@
     "  \n",
     "# L2Dot is solved using pythons inbuilt sum function.    \n",
     "def L2Dot(xi):\n",
+    "    assert xi.shape[0]>=0, \"L2Dot xi matrix is empty\"\n",
+    "\n",
     "    return sum(abs(xi)**2)**0.5\n",
     "    \n",
     "\n",
@@ -281,56 +211,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Qb Result\n",
+    "In the prinouts we see that the results from d1, d2 and d2dot matches the expected values, hence the implementation was done correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Performance metrics \n",
     "\n",
-    "Now, most ML algorithm uses norms or metrics internally when doing minimizations. Details on this will come later, but for now we need to know that an algorithm typically tries to minimize a given performance metric, the loss function, for all the input data, and implicitly tries to minimize the sum of all norms for the 'distances' between some predicted output, $y_{pred}$ and the true output $y_{true}$, with the distance between these typically given by the $\\norm{2}$ norm\n",
-    "\n",
-    "$$   \n",
-    "  \\mbox{individual loss:}~~L\\powni = d(y_{pred}\\powni,y_{true}\\powni)\n",
-    "$$ \n",
-    "\n",
-    "with $y_{pred}\\powni$, a scalar value, being the output from the hypothesis function, that maps the input vector $\\bx\\powni$ to a scalar\n",
-    "\n",
-    "$$ \n",
-    "    y_{pred}\\powni = \\hat{y}\\powni = h(\\bx\\powni;\\btheta)\n",
-    "$$\n",
-    "\n",
-    "and the total loss, $J$ will be the sum over all $i$'s\n",
-    "\n",
-    "$$\n",
-    "    \\ar{rl}{\n",
-    "        J &= \\frac{1}{n} \\sum_{i=1}^{n} L\\powni\\\\\n",
-    "        &= \\frac{1}{n} \\sum_{i=1}^{n} d( h(\\bx\\powni) , y\\powni_{true})\n",
-    "    }\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "### Performance Metric in vector/matrix notation using $\\norm{2}$\n",
-    "\n",
-    "Remember the data-flow model for supervised learning\n",
-    "\n",
-    "<img src=\"Figs/ml_simple_vector.png\" style=\"width:500px\">\n",
-    "\n",
-    "Let us now express $J$ in terms of vectors and matrices instead of summing over individual scalars, and let's use $\\norm{2}$ as the distance function\n",
-    "\n",
-    "$$\n",
-    "    \\ar{rl}{\n",
-    "        J(\\bX,\\by;\\btheta) &= \\frac{1}{n} \\sum_{i=1}^{n} L\\powni\\\\\n",
-    "        &= \\frac{1}{n}\\sum_{i=1}^{n} d(h(\\bX\\powni) - \\by\\powni_{true})^2\\\\\n",
-    "        &= \\frac{1}{n} ||h(\\bX) - \\by_{true} ||_2^2\\\\\n",
-    "        &= \\frac{1}{n} ||\\by_{pred} - \\by_{true} ||_2^2\\\\\n",
-    "     }\n",
-    "$$\n",
-    "\n",
-    "with the matrix-vector notation\n",
-    "\n",
-    "$$ \n",
-    "    \\by_{pred} = \\hat{\\by} =  h(\\bX;\\btheta)\n",
-    "$$\n",
-    "\n",
-    "#### Loss or Objective Function using the Mean Squared Error\n",
-    "\n",
-    "This formulation is equal to the definition of the _mean-squared-error_, MSE (or indirectly also RMSE), here given in the general formulation for some random variable $Z$ \n",
     "\n",
     "$$\n",
     "    \\ar{rl}{\n",
@@ -339,39 +229,6 @@
     "    }\n",
     "$$\n",
     "\n",
-    "with sum-of-squares (SS) is given simply by\n",
-    "\n",
-    "$$\n",
-    "    \\mbox{SS} = \\sum_{i=1}^{n} (\\hat{Z}_i-Z_i)^2\\\\\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "So, using the $\\norm{2}$ for the distance metric, is equal to saying that we want to minimize $J$ with respect to the MSE\n",
-    "\n",
-    "$$\n",
-    "    \\ar{rl}{\n",
-    "        J &= MSE(h(\\bX), \\by_{true}) \\\\\n",
-    "          &= MSE(\\by_{pred}, \\by_{true}) \\\\\n",
-    "          &= MSE(\\hat{\\by}, \\by_{true})\n",
-    "     }\n",
-    "$$\n",
-    "\n",
-    "Note: when minimizing one can ignore the constant factor $1/n$ and it really does not matter if you minimize MSE or RMSE. Often $J$ is also multiplied by 1/2 to ease notation when trying to differentiate it.\n",
-    "\n",
-    "$$\n",
-    "    \\ar{rl}{\n",
-    "        J(\\bX,\\by_{true};\\btheta) &\\propto \\half ||\\by_{pred} - \\by_{true} ||_2^2 \\\\\n",
-    "          &\\propto MSE\n",
-    "     }\n",
-    "$$\n",
-    "\n",
-    "### MSE\n",
-    "\n",
-    "Now, let us take a look on how you calculate the MSE.\n",
-    "\n",
-    "The MSE uses the $\\norm{2}$ norm internally, well, actually $||\\cdot||^2_2$ to be precise, and basically just sums, means and roots the individual (scalar) losses (distances), we just saw before. \n",
-    "\n",
-    "And the RMSE is just an MSE with a final square-root call.\n",
     "\n",
     "### Qc Construct the Root Mean Square Error (RMSE) function (Equation 2-1 [HOLM]).\n",
     "\n",
@@ -385,8 +242,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qc Implementation\n",
+    "Implement an RMSE function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,15 +264,12 @@
     }
    ],
    "source": [
-    "# TODO: solve Qc...implement your RMSE function here\n",
-    "\n",
     "# the RMSE function is implemented using the mean function since the sum part is just the mean of the array (predicted - expected)\n",
     "# a check for an empty list is done\n",
     "def RMSE(X,y):\n",
     "    \n",
     "    #check for empty list\n",
-    "    m = len(X)\n",
-    "    assert m != 0, \"m is 0\"\n",
+    "    assert len(X) != 0, \"m is 0\"\n",
     "    \n",
     "    return np.sqrt(((X-y)**2).mean())\n",
     "    \n",
@@ -433,6 +295,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Qc Results\n",
+    "As seen in the printouts the results does not differ from the extected values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### MAE\n",
     "\n",
     "#### Qd Similar construct the Mean Absolute Error (MAE) function (Equation 2-2 [HOLM]) and evaluate it.\n",
@@ -441,8 +311,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qd Implementation\n",
+    "Implement a MSE function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -454,8 +332,6 @@
     }
    ],
    "source": [
-    "# TODO: solve Qd\n",
-    "\n",
     "# like the RMSE function the mean is again taking, however here it is shown on a more mathematically form using sum and 1/m\n",
     "def MAE(X,y):\n",
     "    \n",
@@ -465,6 +341,8 @@
     "    \n",
     "    return 1/m*sum(abs(X-y))\n",
     "\n",
+    "\n",
+    "# Qd Results\n",
     "\n",
     "# TEST vector:\n",
     "r=MAE(h(X), y)\n",
@@ -477,25 +355,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Qd Result\n",
+    "Again the results matches the expected values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pythonic Code\n",
     "\n",
-    "### Robustness of Code\n",
-    "\n",
-    "Data validity checking is an essential part of robust code, and in Python the 'fail-fast' method is used extensively: instead of lingering on trying to get the 'best' out of an erroneous situation, the fail-fast pragma will be very loud about any data inconsistencies at the earliest possible moment.\n",
-    "\n",
-    "Hence robust code should include a lot of error checking, say as pre- and post-conditions (part of the design-by-contract programming) when calling a function: when entering the function you check that all parameters are ok (pre-condition), and when leaving you check the return parameter (post-conditions).  \n",
-    "\n",
-    "Normally assert-checking or exception-throwing will do the trick just fine, with the exception method being more _pythonic_.\n",
-    "\n",
-    "For the norm-function you could, for instance, test your input data to be 'vector' like, i.e. like\n",
-    "\n",
-    "```python\n",
-    "    assert x.shape[0]>=0 and x.shape[1]==0\n",
-    "    \n",
-    "    if not x.ndim==1:\n",
-    "        raise some error\n",
-    "```\n",
-    "or similar.\n",
     "\n",
     "#### Qe Robust Code \n",
     "\n",
@@ -506,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
